# veldspar2

./: .gitignore  CLAUDE.md  Cargo.toml  settings.toml  spisok.txt
Excalibur_V1/: README.txt  changelog.txt  extras.txt  pack.mcmeta
Excalibur_V1/assets/minecraft/: sounds.json
Excalibur_V1/assets/minecraft/atlases/: blocks.json
Excalibur_V1/assets/minecraft/blockstates/: andesite.json  barrel.json  birch_stairs.json  black_candle_cake.json  black_terracotta.json  blue_candle_cake.json  blue_terracotta.json  brown_candle_cake.json  brown_terracotta.json  cake.json  campfire.json  candle_cake.json  cartography_table.json  cherry_fence_gate.json  crimson_slab.json  cut_copper_slab.json  cyan_candle_cake.json  cyan_terracotta.json  dark_oak_fence.json  (+68 more)
Excalibur_V1/overlay_1.20.2/: overlay.txt
assets/shaders/: break_overlay.wgsl  chunk_opaque.wgsl  chunk_water.wgsl  clouds.wgsl  highlight.wgsl  hotbar.wgsl  item_drop.wgsl  main_menu.wgsl  particles.wgsl  player.wgsl  portal_frame.wgsl  portal_surface.wgsl  sky.wgsl  ui.wgsl  ui_simple.wgsl
crates/veldspar_client/: Cargo.toml
crates/veldspar_client/src/: app.rs  camera.rs  input.rs  main.rs  mesh_worker.rs  net.rs  persistence.rs  player.rs  portal.rs  world.rs
crates/veldspar_client/src/renderer/: atlas.rs  chunk_renderer.rs  clouds.rs  item_drop_renderer.rs  mesh.rs  mod.rs  mod.rs.backup  particles.rs  pipeline.rs  player_renderer.rs  portal_renderer.rs  sky.rs  ui.rs  water_pipeline.rs
crates/veldspar_client/src/ui/: block_highlight.rs  break_indicator.rs  crosshair.rs  debug_overlay.rs  health_hud.rs  hotbar.rs  inventory.rs  main_menu.rs  mod.rs  text_overlay.rs
crates/veldspar_core/: Cargo.toml
crates/veldspar_core/src/: events.rs  jobs.rs  lib.rs
crates/veldspar_persist/: Cargo.toml
crates/veldspar_persist/src/: compression.rs  lib.rs  region.rs  versioning.rs
crates/veldspar_server/: Cargo.toml
crates/veldspar_server/src/: chunk_manager.rs  commands.rs  main.rs  net.rs  persistence.rs  player.rs  server.rs  world.rs
crates/veldspar_shared/: Cargo.toml
crates/veldspar_shared/src/: block.rs  chunk.rs  coords.rs  fluid.rs  inventory.rs  lib.rs  lighting.rs  mob.rs  physics.rs  protocol.rs  recipe.rs  worldgen.rs
docs/prds/: portal-gun.md
tools/: generate_new_block_textures.py
tools/atlas_packer/: Cargo.toml
tools/atlas_packer/src/: main.rs
tools/region_inspector/: Cargo.toml
tools/region_inspector/src/: main.rs
tools/texture_forge/: generate_batch.py  prompts.toml  retry_prompts.toml
(+1712 files in other folders)
