[workspace]
members = [
    "crates/veldspar_core",
    "crates/veldspar_shared",
    "crates/veldspar_client",
    "crates/veldspar_server",
    "crates/veldspar_persist",
    "tools/atlas_packer",
    "tools/region_inspector",
]
resolver = "2"

[workspace.dependencies]
wgpu = "25"
winit = "0.30"
bevy_ecs = "0.15"
renet = "2"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
lz4_flex = "0.11"
zstd = "0.13"
noise = "0.9"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"
glam = { version = "0.29", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
image = "0.25"
bitvec = "1"
bitflags = "2"
toml = "0.8"
pollster = "0.4"
cfg-if = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

